Fixed Z-index class

--- a/style-b.css
+++ b/style-b.css
@@ -50,7 +50,7 @@ p, ul,  ol,  li,  table,  address, blockquote, cite {color:#5f5f5f; line-height:
  
  /* Mobile Navigation Shenanigans*/
 
-.mobile-nav:before {content:""; width:100%; height:100%; background-color:#fff; left:0; position:absolute ;}
+.mobile-nav:before {content:""; width:100%; height:100%; background-color:#fff; left:0; position:absolute; z-index:-1;}
 .mobile-nav {-webkit-transition: -webkit-transform 0.5s cubic-bezier(0.47, 0, 0.75, 0.72); -moz-transition: -moz-transform 0.5s  cubic-bezier(0.47, 0, 0.75, 0.72); transition: transform 0.5s  ease-in-out; }
 .mobile-nav.scroll-down {  -webkit-transform: translateY(100%);  -moz-transform: translateY(100%);  -ms-transform: translateY(100%);  -o-transform: translateY(100%); transform: translateY(100%); }
 
